[ISSUE-11028] Fix binary compat and Java 17 support
- Use void return type for addExports/addOpens/addReads to preserve
  binary compatibility on the ClassRealm class
- Remove redundant @since tags (interface already has @since 4.1.0)
- Conditionally enable --module-path and --enable-native-access only
  on Java 21+ (FFM API not available on Java 17)
- Add classpath fallback in Configurator when ModuleLayer creation
  fails (e.g. module jars reference unavailable APIs)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>