@@ -201,13 +201,8 @@ public interface ClassRealm extends Closeable {
      *
      * @param moduleName the source module name
      * @param packageName the package to export
-     * @return {@code true} if the export was applied, {@code false} if the module was not found
-     *         or is in the boot layer (which requires {@code --add-exports} in the launcher)
-     * @since 4.1.0
      */
-    default boolean addExports(@Nonnull String moduleName, @Nonnull String packageName) {
-        return false;
-    }
+    default void addExports(@Nonnull String moduleName, @Nonnull String packageName) {}
 
     /**
      * Opens a package from a named JPMS module to this realm's unnamed module for deep reflection,
@@ -215,24 +210,14 @@ public interface ClassRealm extends Closeable {
      *
      * @param moduleName the source module name
      * @param packageName the package to open
-     * @return {@code true} if the open was applied, {@code false} if the module was not found
-     *         or is in the boot layer (which requires {@code --add-opens} in the launcher)
-     * @since 4.1.0
      */
-    default boolean addOpens(@Nonnull String moduleName, @Nonnull String packageName) {
-        return false;
-    }
+    default void addOpens(@Nonnull String moduleName, @Nonnull String packageName) {}
 
     /**
      * Adds a reads edge from a named JPMS module to this realm's unnamed module,
      * allowing the named module to access types in this realm.
      *
      * @param moduleName the source module that should read this realm's unnamed module
-     * @return {@code true} if the reads edge was added, {@code false} if the module was not found
-     *         or is in the boot layer
-     * @since 4.1.0
      */
-    default boolean addReads(@Nonnull String moduleName) {
-        return false;
-    }
+    default void addReads(@Nonnull String moduleName) {}
 }
